[package]
name = "calio"
version = "1.0.0"
edition = "2021"
authors = ["Oscar Cortez <om.cortez.2010@gmail.com>"]
license-file = "LICENSE"
description = "iCalendar simple tui visulizer"
readme = "README.md"
documentation = "https://github.com/oscarmcm/calio"
homepage = "https://github.com/oscarmcm/calio"
repository = "https://github.com/oscarmcm/calio"
keywords = ["cli", "tui", "icalendar", "calendar"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.71"
atty = "0.2.14"
chrono = "0.4.26"
chrono-tz = "0.8.2"
clap = { version = "4.2.1", features = ["derive", "suggestions", "color"] }
clap-stdin = "0.2.0"
colored = "2.0.0"
ical = "0.8.0"
itertools = "0.10.5"
serde = "1.0.164"
serde_derive = "1.0.164"
