[package]
name = "calio"
version = "1.0.0"
edition = "2021"
authors = ["Oscar Cortez <om.cortez.2010@gmail.com>"]
license-file = "LICENSE"
description = "iCalendar simple tui visulizer"
readme = "README.md"
documentation = "https://github.com/oscarmcm/calio"
homepage = "https://github.com/oscarmcm/calio"
repository = "https://github.com/oscarmcm/calio"
keywords = ["cli", "tui", "icalendar", "calendar"]
categories = ["command-line-utilities"]

[dependencies]
atty = "0.2.14"
chrono = "0.4.26"
chrono-tz = "0.8.2"
colored = "2.0.0"
serde = "1.0.164"
serde_derive = "1.0.164"
almanac = "0.4.0"
ctrlc = "3.4.0"

[dependencies.ical]
version = "0.8.0"
default-features = false
features = ["ical"]
